# models/customer.js
@@ -1,41 +1,30 @@
-const mongoose = require('mongoose');
-const mongooseDelete = require('mongoose-delete');
+const mongoose = require("mongoose");
+const mongooseDelete = require("mongoose-delete");
 
 const customerSchema = new mongoose.Schema(
     {
+        customerID: {
+            type: String,
+            require: true,
+            unique: true,
+        },
         fullName: {
             type: String,
             require: true,
         },
-        email: {
-            type: String,
-            require: true,
-        },
-        lastLogin: {
-            type: Date,
-            default: new Date(),
-        },
-        password: {
-            type: String,
-            require: true,
-        },
-        active: {
-            type: Boolean,
-            default: false,
-        },
-        role: {
-            type: String,
-            default: 'staff',
+        point: {
+            type: Number,
+            default: 0,
         },
     },
     {
         timestamps: true,
-    },
+    }
 );
 
 customerSchema.plugin(mongooseDelete, {
     deletedAt: true,
-    overrideMethods: 'all',
+    overrideMethods: "all",
 });
 
-module.exports = mongoose.model('Customer', customerSchema);
+module.exports = mongoose.model("Customer", customerSchema);
