# routes/modules/transaction.js
@@ -3,6 +3,7 @@ const jwt = require("jsonwebtoken");
 const productModel = require("../../models/product");
 const supplierModel = require("../../models/supplier");
 const accountModel = require("../../models/account");
+const customerModel = require("../../models/customer");
 const transactionModel = require("../../models/transaction");
 const phoneNumberValidator = require("validate-phone-number-node-js");
 
@@ -12,15 +13,12 @@ module.exports = {
         try {
             const lengthID = 10;
             const transactionID = Math.floor(Math.pow(10, lengthID - 1) + Math.random() * 9 * Math.pow(10, lengthID - 1));
-
             const token = req.query.token || req.headers["x-access-token"];
             const currentSession = jwt.verify(token, process.env.SECRET_KEY);
-
             const unpaidTransaction = await transactionModel.findOne({
                 cashierCode: currentSession.data.userCode,
                 payStatus: false,
             });
-
             if (unpaidTransaction) {
                 return res.status(200).json({
                     status: false,
@@ -61,7 +59,6 @@ module.exports = {
         try {
             const transactionID = parseInt(req.params.transactionID) || 0;
             const transactionQuery = await transactionModel.findOne({ transactionID });
-
             if (!transactionQuery) {
                 return res.status(404).json({
                     status: false,
@@ -72,7 +69,6 @@ module.exports = {
                     },
                 });
             }
-
             return res.status(200).json({
                 status: true,
                 statusCode: 200,
@@ -96,7 +92,6 @@ module.exports = {
         try {
             const transactionID = parseInt(req.params.transactionID) || 0;
             const transactionQuery = await transactionModel.findOne({ transactionID });
-
             if (!transactionID) {
                 return res.status(404).json({
                     status: false,
@@ -118,7 +113,6 @@ module.exports = {
                 });
             }
             await transactionModel.remove({ transactionID });
-
             return res.status(200).json({
                 status: true,
                 statusCode: 200,
@@ -140,14 +134,11 @@ module.exports = {
         // #swagger.tags = ['Transaction']
         try {
             const transactionID = parseInt(req.params.transactionID) || 0;
-            const token = req.query.token || req.headers["x-access-token"];
-            const currentSession = jwt.verify(token, process.env.SECRET_KEY);
             const barcode = req.body.barcode ? req.body.barcode.toUpperCase() : null;
             const productQtyToOrder = req.body.qty ? parseInt(req.body.qty) : 1;
             const productQuery = await productModel.findOne({ barcode });
             const transactionQuery = await transactionModel.findOne({ transactionID });
-
-            console.log(barcode);
+            let cart = transactionQuery.details || [];
             if (!barcode) {
                 return res.status(404).json({
                     status: false,
@@ -158,7 +149,6 @@ module.exports = {
                     },
                 });
             }
-
             if (!transactionQuery) {
                 return res.status(404).json({
                     status: false,
@@ -169,7 +159,6 @@ module.exports = {
                     },
                 });
             }
-
             if (!productQuery) {
                 return res.status(404).json({
                     status: false,
@@ -180,7 +169,6 @@ module.exports = {
                     },
                 });
             }
-
             if (productQuery.quantity <= 0) {
                 return res.status(200).json({
                     status: false,
@@ -191,9 +179,6 @@ module.exports = {
                     },
                 });
             }
-
-            let cart = transactionQuery.details || [];
-
             if (cart.length == 0) {
                 cart.push({
                     barcode: productQuery.barcode,
@@ -205,9 +190,7 @@ module.exports = {
                 const found = cart.some((el) => el.barcode === barcode);
                 if (found) {
                     cart.forEach((item) => {
-                        if (item.barcode == barcode) {
-                            item.qty += productQtyToOrder;
-                        }
+                        if (item.barcode == barcode) item.qty += productQtyToOrder;
                     });
                 } else {
                     cart.push({
@@ -218,7 +201,6 @@ module.exports = {
                     });
                 }
             }
-
             await transactionModel.findOneAndUpdate(
                 { transactionID },
                 {
@@ -226,7 +208,6 @@ module.exports = {
                     totalPrice: transactionQuery.totalPrice + productQuery.unitCost * productQtyToOrder,
                 }
             );
-
             return res.status(200).json({
                 status: true,
                 statusCode: 200,
@@ -259,7 +240,6 @@ module.exports = {
                     },
                 });
             }
-
             if (!transactionQuery) {
                 return res.status(404).json({
                     status: false,
@@ -270,8 +250,13 @@ module.exports = {
                     },
                 });
             }
-            const cash = req.body.cash ? parseInt(req.body.cash) : parseInt(transactionQuery.totalPrice);
-            if (cash < parseInt(transactionQuery.totalPrice)) {
+            let totalPrice = parseInt(transactionQuery.totalPrice);
+            const customerQuery = customerModel.findOne({ customerID: transactionQuery.customerID });
+            if (customerQuery && transactionQuery.usePoint) {
+                totalPrice -= customerQuery.point;
+            }
+            const cash = req.body.cash ? parseInt(req.body.cash) : parseInt(totalPrice);
+            if (cash < parseInt(totalPrice)) {
                 return res.status(200).json({
                     status: false,
                     statusCode: 200,
@@ -281,10 +266,8 @@ module.exports = {
                     },
                 });
             }
-            const changeDue = cash - parseInt(transactionQuery.totalPrice);
-
+            const changeDue = cash - parseInt(totalPrice);
             await transactionModel.findOneAndUpdate({ transactionID }, { payStatus: true, cash, changeDue });
-
             transactionQuery.details.forEach(async (item) => {
                 product = await productModel.findOne({ barcode: item.barcode });
                 await productModel.findOneAndUpdate({ barcode: item.barcode }, { quantity: product.quantity - item.qty });
@@ -305,5 +288,72 @@ module.exports = {
                 error: error.message,
             });
         }
+    },
+    transactionAddCustomer: async (req, res, next) => {
+        // #swagger.tags = ['Transaction']
+        const customerID = req.body.customerID || null;
+        const customerQuery = await customerModel.findOne({ customerID });
+        const transactionID = req.params.transaction || null;
+        if (!customerID || !phoneNumberValidator.validate(customerID))
+            return res.status(200).json({
+                status: false,
+                statusCode: 200,
+                msg: {
+                    en: "Customer's phone number is required and must be a valid phone number.",
+                    vn: "Số điện thoại khách hàng là bắt buộc và phải là số điện thoại hợp lệ.",
+                },
+            });
+        if (!customerQuery)
+            return res.status(200).json({
+                status: false,
+                statusCode: 200,
+                msg: {
+                    en: `${customerID} is not defined as customer. Please create account first.`,
+                    vn: `${customerID} chưa được đăng ký thành viên, vui lòng đăng ký trước khi thực hiện.`,
+                },
+            });
+        await transactionModel.findOneAndUpdate({ transactionID }, { customerID });
+        return res.status(200).json({
+            status: true,
+            statusCode: 200,
+            msg: {
+                en: `${customerQuery.fullName} has been added to this transaction.`,
+                vn: `Khách hàng "${customerQuery.fullName}" đã được thêm vào giao dịch này.`,
+            },
+        });
+    },
+    transactionTogglePoint: async (req, res, next) => {
+        // #swagger.tags = ['Transaction']
+        const transactionID = req.params.transactionID || null;
+        const transactionQuery = await transactionModel.findOne({ transactionID });
+        if (!transactionID) {
+            return res.status(200).json({
+                status: false,
+                statusCode: 200,
+                msg: {
+                    en: `TransactionID product is require!`,
+                    vn: `Mã giao dịch là bắt buộc.`,
+                },
+            });
+        }
+        if (!transactionQuery) {
+            return res.status(200).json({
+                status: false,
+                statusCode: 200,
+                msg: {
+                    en: `This transaction not found. Please create a new transaction!`,
+                    vn: `Giao dịch này không tồn tại, vui lòng thực hiện lại.`,
+                },
+            });
+        }
+        await transactionModel.findOneAndUpdate({ transactionID }, { usePoint: !transactionQuery.usePoint });
+        return res.status(200).json({
+            status: true,
+            statusCode: 200,
+            msg: {
+                en: "Apply customer's point status successfully!",
+                vn: "Đã thay đổi trạng thái sử dụng điểm của khách hàng thành công.",
+            },
+        });
     },
 };
